src/test/examples/custom/valid/class/classFunctionCanCallGlobalFunction.wacc
begin
    class Driver is
        private string name
        public string getName() is 
             return name
        end
    end
    class Car is
        private int passengers ;    # Class attributes 
        public string driversName;
        public bool isDriving 
        public bool drive() is      # Class methods
            isDriving = call returnTrue() ; # Class methods can call normal functions
            return isDriving
        end
        public string assignDriver() is
            Driver d = new Driver("Ren");    # Class methods make instance of classes defined before it
            string dName = call d.getName(); # and use their methods
            driversName = dName;
            return dName
        end
    end
    bool returnTrue() is
         return true
    end
    Car car = new Car(5,"Tim",false);         # Instantiating with implicit constructor
    println car.driversName;
    string s = call car.assignDriver();
    println s;
    println car.driversName;
    bool driving = call car.drive() ;    # Accessing class attributes and methods
    println driving        
end






















